<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtAnuncio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtAnuncio"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/imgEnacal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="77dp" />

    <ImageView
        android:id="@+id/imgEnacal"
        android:layout_width="277dp"
        android:layout_height="218dp"
        app:layout_constraintBottom_toTopOf="@id/txtNombre1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAnuncio"
        app:srcCompat="@drawable/enacal" />

    <TextView
        android:id="@+id/txtNombre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtNombre1"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/txtNombre2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgEnacal" />

    <TextView
        android:id="@+id/txtNombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtNombre2"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnAcceder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNombre1" />

    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="#21D13F"
        android:fontFamily="sans-serif-black"
        android:text="@string/txt_btnAcceder"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNombre2"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="518dp" />
</androidx.constraintlayout.widget.ConstraintLayout>